# givaro

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CONTRIBUTORS  COPYRIGHT  ChangeLog  HOWTO_RELEASE  HOWTO_UPDATE_WEBSITE  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.in  configure.ac  configure.in  givaro-config.in  givaro-makefile.in  givaro.pc.in  givaro_makefile.in  incremente-versions
benchmarks/: Makefile  Makefile.am  Makefile.tests  benchmark-infnorm.C  benchmark-recint_exp.C  benchmark-recint_inadd.C  benchmark-recint_inmul.C  benchmark-recint_inv_arazi.C  benchmark-recint_inv_naive.C  benchmark-recint_mul.C  benchmark-recint_mulm.C  benchmark-recint_tmul.C  generic.gnuplot  perfpublisher.sh  recint_inv_arazi.C
branches/3.5/: Makefile.am  configure.ac
branches/3.5/macros/: autogen.sh  debug.m4  givaro-doc.m4  gmp-check.m4
branches/3.5/tests/: test-ffarith.C  test-integer.C  test-mod.C  test-ratrecon.C  test-ringarith.C
branches/3.8/: Makefile.am  configure.ac
branches/3.8/macros/: Makefile.am  gmp-check.m4
branches/3.8/src/: Makefile.am
branches/3.8/tests/: test-conversion.C  test-integer.C
docs/: Doxyfile  Doxyfile.in  Doxyfile.mod  DoxyfileDev.in  DoxyfileDev.mod  Makefile.am  mainpage.doxy
examples/: Makefile.am
examples/FiniteField/: ChineseRemaindering.C  GF128.C  GFirreducible.C  GaloisFields.C  Makefile.am  Test_Extension.C  all_field.C  domain_to_operatorstyle.C  exponentiation.C  ff_arith.C  gfq_atomic.C  kronecker.C  zpz_atomic.C
examples/Integer/: Fibonacci.C  Makefile.am  ModularSquareRoot.C  ProbLucas.C  RSA_breaking.C  RSA_decipher.C  RSA_encipher.C  RSA_keys_generator.C  givaro-ssh-keygen.C  iexponentiation.C  ifactor.C  ifactor_lenstra.C  ifactor_loop.C  igcd.C  igcdext.C  ilcm.C  ispower.C  isprime.C  isproot.C  lambda.C  lambda_inv.C  nb_primes.C  nextprime.C  order.C  phi.C  prevprime.C  primitiveelement.C  primitiveroot.C  probable_primroot.C  test_random.C
examples/Matrix/: Makefile.am  f4n3.cpp
examples/Polynomial/: AES_SubBytes.C  Makefile.am  PolynomialCRT.C  bivariate.C  highorder.C  interpolate.C  isgenerator.C  isirred.C  isprimitive.C  pol_arith.C  pol_eval.C  pol_factor.C  trunc_arith.C
examples/Rational/: Makefile.am  iratrecon.C  polydouble.C
examples/RecInt/: Makefile.am  Makefile.in  extended-int-types.C  inv_arazi.C  mul_gmp.C  recint-iterator.C  rsa.C
macros/: Makefile.am  aclocal-include.m4  ax_check_x86_features.m4  ax_cxx_compile_stdcxx_11.m4  ax_gcc_x86_cpu_supports.m4  common.m4  config-header.m4  debug.m4  givaro-doc.m4  gmp-check.m4  instr_set.m4  simd-check.m4
macros/CodeChunk/: Makefile.am  avx2.C  fma.C  sse2.C  sse4.1.C  ssse3.C
src/: Makefile.am  dummy.C
src/kernel/: Makefile.am
src/kernel/bstruct/: Makefile.am  givarray0.h  givarray0.inl  givarrayallocator.h  givarrayfixed.h  givbits.C  givbits.h  givbits.inl  givelem.h  givhashtable.h  givhashtable.inl  givlist0.h  givlist0.inl  givstack.h  givstack.inl
src/kernel/field/: Makefile.am  StaticElement.h  chineseremainder.h  extension.h  gf2.h  gf2.inl  gfq.h  gfq.inl  gfqext.h  gfqkronecker.h  giv_randiter.h  givprimes16.C  givprimes16.h  givrns.h  givrnsconvert.inl  givrnscstor.inl  givrnsfixed.h  givrnsfixed.inl  givtablelimits.C  givtablelimits.h  modular-int16.inl  modular-int32.C  modular-int32.h  modular-int64.h  modular-integer.h  modular-integer.inl  modular-log16.h  modular-log16.inl  modular-uint32.C  modular-uint32.h  modular-uint32.inl  modular.h  montgomery-int32.h  qfield.h
src/kernel/gmp++/: Makefile.am  gmp++.C  gmp++.doxy  gmp++.h  gmp++_int.C  gmp++_int.h  gmp++_int.inl  gmp++_int_add.C  gmp++_int_compare.C  gmp++_int_cstor.C  gmp++_int_div.C  gmp++_int_gcd.C  gmp++_int_io.C  gmp++_int_lib.C  gmp++_int_misc.C  gmp++_int_mod.C  gmp++_int_mul.C  gmp++_int_pow.C  gmp++_int_rand.inl  gmp++_int_sub.C  gmp++_rat.C  gmp++_rat.h  gmp++_rat.inl  gmp++_rat_add.C  gmp++_rat_compare.C  gmp++_rat_cstor.C  gmp++_rat_io.C  gmp++_rat_misc.C
src/kernel/integer/: Makefile.am  givinteger.C  givinteger.h  givintfactor.h  givintfactor.inl  givintnumtheo.h  givintnumtheo.inl  (+12 more)
tests/: Makefile.am  jenkins-maker.sh  perfpublisher.sh  test-brillhart.C  test-conversion.C  test-crt.C  test-extension.C  test-ffarith.C  test-fieldarith.h  test-geom.C  test-ifactor.C  test-integer.C  test-matrix.C  test-midmul.C  test-mod.C  test-modsqroot.C  test-modularmulprecomp.C  test-poly.C  test-qfield.C  test-random.C  test-rational-class.C  test-ratrecon.C  test-recint_cast.C  test-recint_convert.C  test-recint_exp.C  test-recint_extra.C  test-recint_rand.C  test-regression.C  test-ringarith.C  test-rint_arith.C  test-rmint_arith.C  test-rmint_comparisons.C  test-rmint_complex.C  test-rmint_constructors.C  test-rmint_inv_div.C  test-rmint_montgomery.C  test-rmint_neg.C  test-ruint_arazi.C  test-ruint_arith.C  test-ruint_comparisons.C  (+9 more)
tests/RecInt/: Makefile.am  recint_exp.C  rmint_comparisons.C  rmint_montgomery.C  ruint_comparisons.C  ruint_constructors.C  ruint_shift.C
trunk/: AUTHORS  COPYRIGHT  Makefile.am  README  autogen.sh  config.h.in  configure.ac  configure.in  givaro-makefile.in  incremente-versions
trunk/benchmarks/: Makefile.am  benchmark-recint_exp.C  benchmark-recint_inv_naive.C  benchmark-recint_mul.C  recint_mul.C
trunk/docs/: Doxyfile  Doxyfile.mod  DoxyfileDev  DoxyfileDev.mod  Makefile.am  mainpage.doxy
trunk/examples/: Makefile.am
trunk/macros/: Makefile.am  config-header.m4  debug.m4  givaro-doc.m4  gmp-check.m4
trunk/src/: Makefile.am  dummy.C
trunk/tests/: Makefile.am  test-conversion.C  test-crt.C  test-ffarith.C  test-geom.C  test-ifactor.C  test-integer.C  test-mod.C  test-modsqroot.C  test-random.C  test-rational-class.C  test-ratrecon.C  test-recint_cast.C  test-recint_convert.C  test-recint_extra.C  test-recint_rand.C  test-ringarith.C  test-rint_arith.C  test-rmint_arith.C  test-rmint_comparisons.C  test-rmint_constructors.C  test-rmint_inv_div.C  test-ruint_arith.C  test-ruint_comparisons.C  test-ruint_fiddling.C  test-ruint_lmul.C  test-ruint_square.C  test-trunc.C
(+2637 files in other folders)
