SUBDIRS=src macros examples

bin_SCRIPTS=givaro-config givaro-makefile

include_HEADERS=givaro-config.h

DISTCLEANFILES = src/kernel/system/givaro
DISTCLEANFILES += src/kernel/bstruct/givaro
DISTCLEANFILES += src/kernel/integer/givaro
DISTCLEANFILES += src/kernel/memory/givaro
DISTCLEANFILES += src/kernel/rational/givaro
DISTCLEANFILES += src/kernel/zpz/givaro
DISTCLEANFILES += src/kernel/gmp++/gmp++
DISTCLEANFILES += src/library/matrix/givaro
DISTCLEANFILES += src/library/poly1/givaro
DISTCLEANFILES += src/library/tools/givaro
DISTCLEANFILES += src/library/vector/givaro
