# Copyright(c)'1994-2009 by The Givaro group
# This file is part of Givaro.
# Givaro is governed by the CeCILL-B license under French law
# and abiding by the rules of distribution of free software.
# see the COPYRIGHT file for more details.
EXTRA_DIST=             \
	aclocal-include.m4	\
	gmp-check.m4		\
	config-header.m4    \
	givaro-doc.m4       \
	ax_cxx_compile_stdcxx_11.m4 \
	debug.m4
